[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/king.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/queen.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/carpenter.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/commander.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/wizard.png" type="Texture" id=6]
[ext_resource path="res://assets/frame_label.png" type="Texture" id=7]

[node name="UI" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TextureKing" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="TextureQueen" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1102.0
margin_top = 10.0
margin_right = 1376.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="TextureCarpenter" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_top = 620.0
margin_right = 548.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="TextureCommander" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 596.0
margin_top = 620.0
margin_right = 796.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="TextureWizard" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 844.0
margin_top = 620.0
margin_right = 1044.0
margin_bottom = 840.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="ctn_message" type="TextureRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 339.0
margin_top = 653.0
margin_right = 1047.0
margin_bottom = 721.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[node name="message" type="Label" parent="ctn_message" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = -3.0
margin_right = 704.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Theme", "custom_styles" ]

[node name="ctn_turn" type="TextureRect" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 304.0
margin_top = 13.0
margin_right = 504.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[node name="turn_label" type="Label" parent="ctn_turn" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.01
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 11.0
margin_right = 393.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player turn : #1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="cnt_king_hand" type="VBoxContainer" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 290.0
margin_bottom = 840.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="TextureCard1" type="TextureButton" parent="cnt_king_hand" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 10.0
margin_right = 245.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Grow Direction", "Margin", "Textures" ]

[node name="TextureCard2" type="TextureButton" parent="cnt_king_hand" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 210.0
margin_right = 245.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Margin" ]

[node name="TextureCard3" type="TextureButton" parent="cnt_king_hand" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 410.0
margin_right = 245.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Margin" ]

[node name="cnt_queen_hand" type="VBoxContainer" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1102.0
margin_top = 220.0
margin_right = 1398.0
margin_bottom = 840.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="TextureCard4" type="TextureButton" parent="cnt_queen_hand" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 10.0
margin_right = 245.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Margin" ]

[node name="TextureCard5" type="TextureButton" parent="cnt_queen_hand" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 210.0
margin_right = 245.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Margin" ]

[node name="TextureCard6" type="TextureButton" parent="cnt_queen_hand" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 410.0
margin_right = 245.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Grow Direction", "Margin" ]


